[#62] Create 403 page + [#59] Create 404 page - v03

--- a/src/main/webapp/error/403Error.html
+++ b/src/main/webapp/error/403Error.html
@@ -144,7 +144,7 @@
 			<div class="modal-header">
 				<h4 class="modal-title">Registration
 					<button class="close" type="button" data-dismiss="modal">
-						<i class="fa fa-close"></i>
+						<span class="fa fa-close"></span>
 					</button>
 				</h4>
 
@@ -161,7 +161,7 @@
 
 					<form action="/registration">
 						<button class="btn btn-primary" type="submit">
-							<i class="fa fa-user-circle-o"></i> Create an account
+							<span class="fa fa-user-circle-o"></span> Create an account
 						</button>
 					</form>
 
