--- a/src/main/webapp/resources/ProjectPage.html
+++ b/src/main/webapp/resources/ProjectPage.html
@@ -120,6 +120,50 @@
                     </form>
                 </li>
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown active "><a class="dropdown-toggle" data-toggle="dropdown">
+                    <span class="pull-left" style="margin-right:8px; margin-top:-5px;">
+                        <img src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg"
+                             class="img-responsive img-circle" title="UserName"
+                             alt="UserName" width="30px" height="30px"/>
+                    </span>
+                    <span>UserName</span>
+                    <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <div class="navbar-content">
+                                <div class="row">
+                                    <div class="col-md-5 col-xs-5">
+                                        <img src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg"
+                                             alt="AltText" class="img-responsive"
+                                             width="120px" height="120px"/>
+                                    </div>
+                                    <div class="col-md-7 col-xs-7" style="margin-left: -35px">
+                                        <div class="container">
+                                            <div>Welcome back,<strong> UserName!</strong></div>
+                                            <div class="container"
+                                                 style="margin-top:5px; font-size: 15px; font-weight: 500">
+                                                <ul class="non-marker">
+                                                    <li><a href="#"><span class="fa fa-user-o" aria-hidden="true"
+                                                                          style="margin-right: 5px"></span>My account</a></li>
+                                                    <li><a href="#"><span class="fa fa-star" aria-hidden="true"
+                                                                          style="margin-right: 5px"></span>Favourites</a></li>
+                                                    <li><a href="#"><span class="fa fa-question-circle-o"
+                                                                          style="margin-right: 5px"></span>Help</a></li>
+                                                    <li><a href="#" class="btn btn-success btn-md"
+                                                           style="margin-top: 5px"><span class="fa fa-sign-out"
+                                                                                         aria-hidden="true"></span>Sign Out</a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+
         </div>
     </div>
 </div>
@@ -127,7 +171,7 @@
 <div class="container col-xs-12">
     <div class="row">
         <!-- /PRICE ITEM -->
-        <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <div class="col-xs-12 col-md-8 col-md-offset-1">
             <div class="item">
                 <div class="thumbnail">
                     <div class="caption centered">
@@ -143,7 +187,6 @@
                 </div>
 
             </div>
-
             <div class="item">
                 <div class="thumbnail">
                     <div>
@@ -290,6 +333,7 @@
                     </div>
                 </div>
             </div>
+
             <!--Window of investments-->
             <div class="item">
                 <div class="hidden-lg hidden-md">
@@ -297,11 +341,15 @@
                     <!--You had here class called panel-red. I've changed it to panel-danger. If You want return it, so I don`t mind-->
                     <div class="panel price panel-danger">
                         <div class="panel-heading  text-center">
-                            <h3>Min investment $10000</h3>
+                            <h4><strong>Min investment</strong> $10000</h4>
                         </div>
                         <div class="panel-body text-center">
-                            <p class="lead" style="font-size:40px">
-                            <h2>Total amount we need $1000000</h2></p>
+                            <h4>Total project investment $100000</h4>
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-info" style="width: 20%"></div>
+                            </div>
+                            <h4 class="text-right">Project need $80000</h4>
+
                         </div>
                         <ul class="list-group list-group-flush text-center">
                             <li class="list-group-item"><i class="icon-ok text-danger"></i> Personal use</li>
@@ -317,25 +365,30 @@
             </div>
             <!--------------------------------------------->
         </div>
-        <div class="col-md-3 col-md-offset-9  hidden-sm hidden-xs " style="position: fixed">
+        <div class="col-md-2 col-md-offset-9 hidden-sm hidden-xs " style="position: fixed">
             <div class="item">
 
                 <!-- PRICE ITEM -->
                 <!--The same situation with classes. I mean panel-red to panel-danger-->
                 <div class="panel price panel-danger">
-                    <div class="panel-heading  text-center">
-                        <h3>Min investment $10000</h3>
+                    <div class="panel-heading">
+                        <h4><strong>Min investment</strong></h4>
+                        <h3 class="text-right">$10000</h3>
                     </div>
-                    <div class="panel-body text-center">
-                        <p class="lead" style="font-size:40px">
-                        <h2>Total amount we need $1000000</h2></p>
+                    <div class="panel-body text-right">
+
+                        <h5>Total project investment $100000</h5>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-info" style="width: 20%"></div>
+                        </div>
+                        <h5>Project need $80000</h5>
                     </div>
                     <ul class="list-group list-group-flush text-center">
                         <li class="list-group-item"><i class="icon-ok text-danger"></i> Personal use</li>
                     </ul>
                     <div class="panel-footer">
                         <button type="button" class="btn btn-success btn-block" data-toggle="modal"
-                                data-target="#modal-1">I
+                                data-target="#modal-invest">I
                             want to invest
                         </button>
                     </div>
@@ -343,24 +396,21 @@
             </div>
         </div>
     </div>
-    <div class="footer centered">
-        <span href="#"><i class="fa fa-twitter"></i></span>
-        <span href="#"><i class="fa fa-facebook"></i></span>
-        <span href="#"><i class="fa fa-vk"></i></span>
+    <div class="row">
 
+        <div class="footer">
+            <div class="container">
+                <div class="row centered">
+                    <a href="#"><span class="fa fa-twitter"></span></a>
+                    <a href="#"><span class="fa fa-facebook"></span></a>
+                    <a href="#"><span class="fa fa-vk"></span></a>
+                </div>
+            </div>
+        </div>
     </div>
-    <!--<div class="footer">-->
-    <!--<div class="container">-->
-    <!--<div class="row centered">-->
-    <!--<a href="#"><i class="fa fa-twitter"></i></a>-->
-    <!--<a href="#"><i class="fa fa-facebook"></i></a>-->
-    <!--<a href="#"><i class="fa fa-vk"></i></a>-->
-
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
 
 </div>
+
 <!--Modal-->
 <div class="modal fade" id="modal-invest">
     <div class="modal-dialog">
@@ -394,7 +444,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/salvattore.min.js"></script>
-<script src="../../resources/js/menu.js"></script>
+<script src="resources/js/menu.js"></script>
 <script src="js/slide-down.js"></script>
 </body>
 </html>
