project page design fix

--- a/src/main/webapp/resources/ProjectPage.html
+++ b/src/main/webapp/resources/ProjectPage.html
@@ -171,7 +171,7 @@
 <div class="container col-xs-12">
     <div class="row">
         <!-- /PRICE ITEM -->
-        <div class="col-xs-12 col-md-8 col-md-offset-1">
+        <div class="col-xs-12 col-md-7 col-md-offset-1 col-lg-8">
             <div class="item">
                 <div class="thumbnail">
                     <div class="caption centered">
@@ -245,94 +245,6 @@
                     </div>
                 </div>
             </div>
-            <div class="item">
-                <div class="thumbnail">
-                    <div>
-                        <a href="#"><h3>Competitors</h3></a>
-                        <hr>
-                    </div>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                            velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <hr>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="thumbnail">
-                    <div>
-                        <a href="#"><h3>Benefits</h3></a>
-                        <hr>
-                    </div>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                            velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <hr>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="thumbnail">
-                    <div>
-                        <a href="#"><h3>Bussiness model</h3></a>
-                        <hr>
-                    </div>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                            velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <hr>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="thumbnail">
-                    <div>
-                        <a href="#"><h3>Risks</h3></a>
-                        <hr>
-                    </div>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                            velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <hr>
-                    </div>
-                </div>
-            </div>
 
             <!--Window of investments-->
             <div class="item">
@@ -365,7 +277,7 @@
             </div>
             <!--------------------------------------------->
         </div>
-        <div class="col-md-2 col-md-offset-9 hidden-sm hidden-xs " style="position: fixed">
+        <div class="col-md-3 col-md-offset-8 col-lg-offset-9 col-lg-2 hidden-sm hidden-xs " style="position: fixed">
             <div class="item">
 
                 <!-- PRICE ITEM -->
