--- a/src/main/webapp/resources/MainPage.html
+++ b/src/main/webapp/resources/MainPage.html
@@ -16,37 +16,9 @@
     <script src="js/angular-route.js"></script>
 
     <script>
-        var greatStartApp = angular.module('greatStartApp', ['ngRoute']);
-        greatStartApp.config(function ($routeProvider) {
-            $routeProvider
-                .when('/',
-                    {
-                        controller: 'SimpleController',
-                        templateUtl: 'app/views/Main.html'
-                    })
-                .when('/user/:userID',
-                    {
-                        controller: 'SimpleController',
-                        templateUtl: 'views/Main.html'
-                    })
-                .otherwise({redirectTo: '/'});
-        });
-        greatStartApp.controller('SimpleController', ['$scope', function ($scope) {
-            $scope.test = [
-                {name: 'Dave Jones', city: 'Phoenix'},
-                {name: 'Jamie Riley', city: 'Atlanta'},
-                {name: 'Heedy Wahlin', city: 'Chandler'},
-                {name: 'Thomas Winter', city: 'Seattle'}
-            ];
-            $scope.addTest = function () {
-                $scope.test.push(
-                    {
-                        name: $scope.newTest.name,
-                        city: $scope.newTest.city
-                    });
-            };
-        }]);
+
     </script>
+    <script src="app/controllers/controllers.js"></script>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 
@@ -91,13 +63,8 @@
 <div>
     <div ng-view></div>
 </div>
-<div ng-init="name='world'" class="centered">
-    <p>Hello <span ng-bind="name"></span></p>
-    <p>1+8={{1+8}}</p>
-</div>
-
 <div id="footer">
-    <div class="footer navbar-fixed-bottom">
+    <div class="footer">
         <div class="container">
             <div class="row centered">
                 <a href="#"><span class="fa fa-twitter"></span></a>
@@ -150,7 +117,6 @@
 <script src="js/bootstrap.js"></script>
 <script src="js/salvattore.min.js"></script>
 <!--<script src="app/controllers/controllers.js"></script>-->
-
 
 
 </body>
