--- a/src/main/webapp/resources/ProjectPage.html
+++ b/src/main/webapp/resources/ProjectPage.html
@@ -18,80 +18,11 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.js"></script>
 
-    <style type="text/css">
-        .pagination > li > a, .pagination > li > span {
-            border-radius: 50% !important;
-            margin: 0 5px;
-        }
-    </style>
-
 </head>
 
 <body>
 
 <div class="navbar navbar-default navbar-fixed-top">
-    <div class="wrapper" id="wrapper">
-
-        <!-- Sidebar -->
-        <nav class="navbar navbar-fixed-top" id="sidebar-wrapper" role="navigation">
-            <ul class="nav sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="#">
-                        Menu
-                    </a>
-                </li>
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Events</a>
-                </li>
-                <li>
-                    <a href="#">Investments</a>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Events <span
-                            class="caret"></span></a>
-
-                    <ul class="dropdown-menu" role="menu">
-                        <li class="dropdown-header">Dropdown heading</li>
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-
-                </li>
-                <li>
-                    <a href="#">Interests</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-                <li>
-                    <a href="#">Follow me</a>
-                </li>
-            </ul>
-        </nav>
-        <!-- /#sidebar-wrapper -->
-
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-            <button type="button" class="hamburger is-closed" data-toggle="offcanvas">
-                <span class="hamb-top"></span>
-                <span class="hamb-middle"></span>
-                <span class="hamb-bottom"></span>
-            </button>
-
-        </div>
-        <!-- /#page-content-wrapper -->
-
-    </div>
-
     <div class="container">
 
         <div class="navbar-header">
@@ -102,15 +33,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Great<i class="fa fa-rocket fa-lg" aria-hidden="true">
+            <a class="navbar-brand" href="#">Great<span class="fa fa-rocket fa-lg" aria-hidden="true">
                 <text/>
-            </i>Start</a>
+            </span>Start</a>
         </div>
         <div class="collapse navbar-collapse" id="responsive-menu">
             <ul class="nav navbar-nav navbar-left">
-                <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Events</a></li>
                 <li><a href="#">Contacts</a></li>
                 <li>
                     <form role="search" class="navbar-form">
@@ -319,7 +248,7 @@
         <div class="modal-content ">
             <div class="modal-header">
                 <button class="close" type="button" data-dismiss="modal">
-                    <i class="fa fa-close"></i>
+                    <span class="fa fa-close"></span>
                 </button>
                 <h4 class="modal-title">Invest in ProjectName</h4>
             </div>
@@ -346,7 +275,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/salvattore.min.js"></script>
-<script src="resources/js/menu.js"></script>
+<script src="js/menu.js"></script>
 <script src="js/slide-down.js"></script>
 </body>
 </html>
