--- a/src/main/webapp/resources/MainPage.html
+++ b/src/main/webapp/resources/MainPage.html
@@ -10,15 +10,10 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/font-awesome.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <!--<link href="css/main.css" rel="stylesheet">-->
+    <!--<link href="css/card.css" rel="stylesheet">-->
 
-    <script src="js/angular.js"></script>
-    <script src="js/angular-route.js"></script>
 
-    <script>
-
-    </script>
-    <script src="app/controllers/controllers.js"></script>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 
@@ -58,6 +53,11 @@
         </div>
     </div>
 </div>
+
+<!---------------------------------------------------------------------------------------------------------------------------->
+
+
+<!---------------------------------------------------------------------------------------------------------------------------->
 
 <!--Placeholder for views-->
 <div>
@@ -111,12 +111,13 @@
         </div>
     </div>
 </div>
+<script src="js/angular.js"></script>
+<script src="js/angular-route.js"></script>
 
-<!--<script src="app/app.js"></script>-->
+<script src="app/controllers/controllers.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/salvattore.min.js"></script>
-<!--<script src="app/controllers/controllers.js"></script>-->
 
 
 </body>
