--- a/src/main/webapp/resources/index.html
+++ b/src/main/webapp/resources/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="greatStartApp">
+<html lang="en" ng-cloak ng-app="greatStartApp">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,12 +10,14 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/font-awesome.css" rel="stylesheet">
-    <!--<link href="css/main.css" rel="stylesheet">-->
-    <!--<link href="css/card.css" rel="stylesheet">-->
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/card.css" rel="stylesheet">
+    <link href="css/action.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
 
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <!--<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>-->
+    <!--<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>-->
 
 </head>
 <body>
@@ -37,8 +39,8 @@
             <ul class="nav navbar-nav navbar-left">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Events</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="#!/events">Events</a></li>
+                <li><a href="#!/projects">Projects</a></li>
                 <li>
                     <form role="search" class="navbar-form navbar-left">
                         <div class="form-group">
@@ -56,13 +58,13 @@
 
 <!---------------------------------------------------------------------------------------------------------------------------->
 
-
 <!---------------------------------------------------------------------------------------------------------------------------->
 
 <!--Placeholder for views-->
 <div>
     <div ng-view></div>
 </div>
+
 <div id="footer">
     <div class="footer">
         <div class="container">
@@ -117,8 +119,5 @@
 <script src="app/controllers/controllers.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="js/bootstrap.js"></script>
-<script src="js/salvattore.min.js"></script>
-
-
 </body>
 </html>
