--- a/src/main/resources/public/GreatStart.html
+++ b/src/main/resources/public/GreatStart.html
@@ -95,11 +95,10 @@
         </div>
     </div>
 </div>
-<script src="js/angular.js"></script>
-<script src="js/angular-route.js"></script>
-
+<script type="text/javascript" src="js/angular.js"></script>
+<script type="text/javascript" src="js/angular-route.js"></script>
 <script src="app/controllers/controllers.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="js/bootstrap.js"></script>
+<script type="text/javascript" src="js/bootstrap.js"></script>
 </body>
 </html>
