--- a/src/main/resources/static/error/403.html
+++ b/src/main/resources/static/error/403.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>403</title>
+    <link rel="shortcut icon" href="/static/img/favicon.png" type="image/x-icon">
 </head>
 <body>
 <h1>Congrats! You have problem now, because</h1>
 <h2>This page with 403 code</h2>
-<img src="http://i2.kym-cdn.com/photos/images/facebook/000/277/976/9e3.jpg">
+<img src="http://i2.kym-cdn.com/photos/images/facebook/000/277/976/9e3.jpg" alt="Troll on a bicycle">
 </body>
 </html>
