--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -61,7 +61,7 @@
         </div>
     </div>
 </div>
-<script type="text/javascript" src="js/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js"></script>
 <script type="text/javascript" src="js/angular-route.js"></script>
 <script src="app/controllers/controllers.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
