fixed links on static resources and renamed files to enable default mapping

--- a/src/main/webapp/error/403.html
+++ b/src/main/webapp/error/403.html
@@ -7,12 +7,12 @@
 
 	<title>403 Forbidden</title>
 
-	<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-	<link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/font-awesome.css" rel="stylesheet">
-	<link href="css/main.css" rel="stylesheet">
-	<link href="css/menu.css" rel="stylesheet">
-	<link href="css/error.css" rel="stylesheet">
+	<link rel="shortcut icon" href="../resources/img/favicon.png" type="image/x-icon">
+	<link href="../resources/css/bootstrap.css" rel="stylesheet">
+	<link href="../resources/css/font-awesome.css" rel="stylesheet">
+	<link href="../resources/css/main.css" rel="stylesheet">
+	<link href="../resources/css/menu.css" rel="stylesheet">
+	<link href="../resources/css/error.css" rel="stylesheet">
 
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -128,9 +128,9 @@
 				Access to this resource is denied!<br>
 			</div>
 			<div class="error-actions">
-				<a href="./WEB-INF/views/DesignPage.html" class="btn btn-primary">
+				<a href="/" class="btn btn-primary">
 					<span class="icon-home icon-white"></span> Take Me Home </a>
-				<a href="./WEB-INF/views/ContactSupport.html" class="btn btn-default">
+				<a href="/support" class="btn btn-default">
 					<span class="icon-envelope"></span> Contact Support </a>
 			</div>
 		</div>
@@ -159,7 +159,7 @@
 					</div>
 					<button type="submit" class="btn btn-success">Login</button>
 
-					<form action="/registration">
+					<form action="/user/registration">
 						<button class="btn btn-primary" type="submit">
 							<span class="fa fa-user-circle-o"></span> Create an account
 						</button>
@@ -176,9 +176,9 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="js/bootstrap.js"></script>
-<script src="js/salvattore.min.js"></script>
-<script src="js/menu.js"></script>
-<script src="js/slide-down.js"></script>
+<script src="../resources/js/bootstrap.js"></script>
+<script src="../resources/js/salvattore.min.js"></script>
+<script src="../resources/js/menu.js"></script>
+<script src="../resources/js/slide-down.js"></script>
 </body>
 </html>
