--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,46 +25,10 @@
 </div>
 
 
-
-<div class="modal fade" id="modal-login">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">Registration
-                    <button class="close" type="button" data-dismiss="modal">
-                        <span class="fa fa-close"></span>
-                    </button>
-                </h4>
-
-            </div>
-            <div class="modal-body">
-                <form action="" method="POST">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="login" value="">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control" placeholder="password" value="">
-                    </div>
-                    <button type="submit" class="btn btn-success">Login</button>
-
-                    <form action="">
-                        <button class="btn btn-primary" type="submit">
-                            <span class="fa fa-user-circle-o"></span> Create an account
-                        </button>
-                    </form>
-
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-danger" type="button" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js"></script>
-<script type="text/javascript" src="js/angular-route.js"></script>
-<script src="app/controllers/controllers.js"></script>
+<script src="js/vendor/angular-route.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.js"></script>
+<script src="js/vendor/bootstrap.js"></script>
+<script src="app/controllers/controllers.js"></script>
 </body>
 </html>
