--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,8 +25,11 @@
 </div>
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js"></script>
+<script src="js/vendor/angular.js"></script>
+<script src="js/vendor/angular-animate.js"></script>
 <script src="js/vendor/angular-route.js"></script>
+<script src="js/vendor/angular-sanitize.js"></script>
+<script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="js/vendor/bootstrap.js"></script>
 <script src="app/controllers/controllers.js"></script>
