--- a/src/main/resources/static/error/403.html
+++ b/src/main/resources/static/error/403.html
@@ -8,7 +8,7 @@
 <body>
 <div>
     <h1>Congrats! You have problem now, because</h1>
-    <h2>This page with 403 code</h2>
+    <h2>this page with <strong>403 code</strong></h2>
     <img src="http://i2.kym-cdn.com/photos/images/facebook/000/277/976/9e3.jpg" alt="Troll on a bicycle">
 </div>
 
