--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,6 +14,7 @@
     <link href="css/card.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/action.css" rel="stylesheet">
+    <link href="css/ng-img-crop.css" rel="stylesheet">
 
 </head>
 <body>
@@ -29,6 +30,7 @@
 <script src="js/vendor/angular-animate.js"></script>
 <script src="js/vendor/angular-route.js"></script>
 <script src="js/vendor/angular-sanitize.js"></script>
+<script src="js/vendor/ng-img-crop.js"></script>
 <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="js/vendor/bootstrap.js"></script>
