--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -35,7 +35,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="js/vendor/bootstrap.js"></script>
 <script src="app/controllers/controllers.js"></script>
+<script src="app/service/UserService.js"></script>
 <script src="views/main/MainController.js"></script>
+<script src="views/main/LoginController.js"></script>
 <script src="views/interest/InterestController.js"></script>
 <script src="views/project/ProjectController.js"></script>
 <script src="views/event/EventController.js"></script>
