--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,7 +23,7 @@
     </style>
 
 </head>
-<body>
+<body  class="ng-cloak" ng-cloak>
 <div ng-include="'views/main/Navbar.html'"></div>
 
 <!--Placeholder for views-->
