--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,6 +15,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/action.css" rel="stylesheet">
     <link href="css/ng-img-crop.css" rel="stylesheet">
+    <link href="css/background.css" rel="stylesheet">
 
 </head>
 <body>
