--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,14 +16,9 @@
     <link href="css/action.css" rel="stylesheet">
     <link href="css/ng-img-crop.css" rel="stylesheet">
 
-    <style type="text/css">
-        [ng\:cloak], [ng-cloak], .ng-cloak {
-            display: none !important;
-        }
-    </style>
 
 </head>
-<body  class="ng-cloak" ng-cloak>
+<body>
 <div ng-include="'views/main/Navbar.html'"></div>
 
 <!--Placeholder for views-->
