--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,6 +16,7 @@
     <link href="css/action.css" rel="stylesheet">
     <link href="css/ng-img-crop.css" rel="stylesheet">
 
+
 </head>
 <body>
 <div ng-include="'views/main/Navbar.html'"></div>
@@ -35,7 +36,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="js/vendor/bootstrap.js"></script>
 <script src="app/controllers/controllers.js"></script>
+<script src="app/service/UserService.js"></script>
 <script src="views/main/MainController.js"></script>
+<script src="views/main/LoginController.js"></script>
 <script src="views/interest/InterestController.js"></script>
 <script src="views/project/ProjectController.js"></script>
 <script src="views/event/EventController.js"></script>
