--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,6 +31,7 @@
 <script src="js/vendor/angular.js"></script>
 <script src="js/vendor/angular-animate.js"></script>
 <script src="js/vendor/angular-route.js"></script>
+<script src="js/vendor/angular-resource.js"></script>
 <script src="js/vendor/angular-sanitize.js"></script>
 <script src="js/vendor/ng-img-crop.js"></script>
 <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
