--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/font-awesome.css" rel="stylesheet">
+    <link href="css/loader.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/card.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -37,6 +38,7 @@
 <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="js/vendor/bootstrap.js"></script>
+<!--<script src="js/vendor/loading-bar.js"></script>-->
 <script src="app/controllers/controllers.js"></script>
 <script src="app/service/LoginService.js"></script>
 <script src="app/service/UserService.js"></script>
