--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -45,5 +45,6 @@
 <script src="views/event/EventController.js"></script>
 <script src="views/user/UserController.js"></script>
 <script src="views/main/PasswordResetController.js"></script>
+<script src="views/main/PasswordResetService.js"></script>
 </body>
 </html>
