--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,6 +41,7 @@
 <script src="views/main/MainController.js"></script>
 <script src="views/main/LoginController.js"></script>
 <script src="views/interest/InterestController.js"></script>
+<script src="views/investment/InvestmentController.js"></script>
 <script src="views/project/ProjectController.js"></script>
 <script src="views/event/EventController.js"></script>
 <script src="views/user/UserController.js"></script>
