[#80] Design admin page - v02

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,6 +16,8 @@
     <link href="css/action.css" rel="stylesheet">
     <link href="css/ng-img-crop.css" rel="stylesheet">
     <link href="css/background.css" rel="stylesheet">
+    <link href="css/ie.css" rel="stylesheet">
+    <link href="css/layout.css" type="text/css" media="screen" />
 
 
 </head>
@@ -46,5 +48,15 @@
 <script src="views/project/ProjectController.js"></script>
 <script src="views/event/EventController.js"></script>
 <script src="views/user/UserController.js"></script>
+<script src="js/vendor/jquery-1.5.2.min.js"></script>
+<script src="js/vendor/hideshow.js"></script>
+<script src="js/vendor/jquery.tablesorter.min.js"></script>
+<script src="js/vendor/jquery.equalHeight.js"></script>
+<script src="js/vendor/event.js"></script>
+<script type="text/javascript">
+    $(function(){
+        $('.column').equalHeight();
+    });
+</script>
 </body>
 </html>
