--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,6 +41,7 @@
 <script src="app/service/LoginService.js"></script>
 <script src="app/service/UserService.js"></script>
 <script src="app/service/InvestmentService.js"></script>
+<script src="app/service/ProjectService.js"></script>
 <script src="views/main/MainController.js"></script>
 <script src="views/main/LoginController.js"></script>
 <script src="views/interest/InterestController.js"></script>
