--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,7 +17,8 @@
     <link href="css/ng-img-crop.css" rel="stylesheet">
     <link href="css/background.css" rel="stylesheet">
     <link href="css/ie.css" rel="stylesheet">
-    <link href="css/layout.css" type="text/css" media="screen" />
+    <link href="css/layout.css" rel="stylesheet">
+    <link href="css/round-about.css" rel="stylesheet">
 
 
 </head>
