--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,5 +46,6 @@
 <script src="views/project/ProjectController.js"></script>
 <script src="views/event/EventController.js"></script>
 <script src="views/user/UserController.js"></script>
+<script src="views/main/RegisterController.js"></script>
 </body>
 </html>
