--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,6 +15,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/action.css" rel="stylesheet">
     <link href="css/ng-img-crop.css" rel="stylesheet">
+    <link href="css/ui-cropper.css" rel="stylesheet">
     <link href="css/background.css" rel="stylesheet">
 
 
@@ -37,6 +38,7 @@
 <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="js/vendor/bootstrap.js"></script>
+<script src="js/vendor/ui-cropper.js"></script>
 <script src="app/controllers/controllers.js"></script>
 <script src="app/service/LoginService.js"></script>
 <script src="app/service/UserService.js"></script>
