--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,6 +16,7 @@
     <link href="css/action.css" rel="stylesheet">
     <link href="css/ng-img-crop.css" rel="stylesheet">
     <link href="css/background.css" rel="stylesheet">
+    <link href="css/round-about.css" rel="stylesheet">
 
 
 </head>
