--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,6 +18,8 @@
     <link href="css/background.css" rel="stylesheet">
     <link href="css/ie.css" rel="stylesheet">
     <link href="css/layout.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/service-box.css">
+    <link rel="stylesheet" href="css/style-add-page.css">
 
 </head>
 <body>
@@ -43,6 +45,7 @@
 <script src="app/service/UserService.js"></script>
 <script src="app/service/PasswordResetService.js"></script>
 <script src="app/service/InvestmentService.js"></script>
+<script src="app/service/InterestService.js"></script>
 <script src="app/service/CategoryService.js"></script>
 <script src="app/service/ProjectService.js"></script>
 <script src="views/main/MainController.js"></script>
