1. In an Investor Interest and Project entities changed cascade type(from CascadeType.All to CascadeType.PERSIST). 2. Added input search field in My Interests view, and appropriate css style in (style-add-page-and-input.css) 3. Fixed  InvestmentInterestController and InvestmentInterestService) 4. Fixed service-box.css 5. In an InterestController.js fixed method deleteinterest(added $route.reload()). 6. In view/project/EditForm.html to tag "testarea" added (style="resize: none"). 7. Added tests to InvestmentInterestControllerTest and InvestmentInterestSrvicetest.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,7 +19,7 @@
     <link href="css/ie.css" rel="stylesheet">
     <link href="css/layout.css" rel="stylesheet"/>
     <link rel="stylesheet" href="css/service-box.css">
-    <link rel="stylesheet" href="css/style-add-page.css">
+    <link rel="stylesheet" href="css/style-add-page-and-input.css">
 
 </head>
 <body>
